# OpenGMS

./: .cproject  .gitignore  .project  CMakeLists.txt  CleanAndMakeBuildDirs.bat  OpenGMS.doxyfile  README.md  do_build.bat  do_build.sh  do_clean.bat  svnwcrev  svnwcrev32  svnwcrev64  updateSVNRevision.bat  updateSVNRevision.sh
CMakeModules/: FindGSL.cmake  UseSWIG_Mine.cmake
devDocs/: Dev Notes.odt
docs/: Ideas.rtf
src/: CMakeLists.txt  Debug.cpp  Debug.h  Helpers.h  Logger.h  Main.cpp  Main.h
src/python/: PythonEngine.cpp  PythonEngine.h
src/ui/: DialogAbout.cpp  DialogAbout.h  DialogAbout.ui  DockWidgetConsole.cpp  DockWidgetConsole.h  DockWidgetFileExplorer.cpp  DockWidgetFileExplorer.h  DockWidgetFileExplorer.ui  DockWidgetTextEditor.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Settings.h  UIManager.cpp  UIManager.h
